# routes/api.php
@@ -1,7 +1,12 @@
 <?php
 
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\ChannelController;
+use App\Http\Controllers\Api\PackageController;
+use App\Http\Controllers\Api\SubscriptionController;
 use App\Http\Controllers\Api\UsersController;
+use App\Models\Package;
+use App\Models\Subscription;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -22,6 +27,15 @@ Route::group(['prefix' => 'v1', 'as' => 'v1.'], function () {
 
         // USER ENDPOINTS
         Route::apiResource('users', UsersController::class);
+
+        // CHANNELS ENDPOINTS
+        Route::apiResource('channels', ChannelController::class);
+
+        // PACKAGE ENDPOINTS
+        Route::apiResource('packages', PackageController::class);
+
+        // SUBSCRIPTION ENDPOINTS
+        Route::apiResource('subscriptions', SubscriptionController::class);
 
         // AUTH ENDPOINTS
         Route::group(['prefix' => 'auth', 'as' => 'auth.'], function () {
